--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ body {
     font-variant: small-caps;
     color: var(--primary-text-color) ;
     line-height: 20px;
-    border: solid 2px red;
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -58,7 +57,6 @@ body {
 main {
     display: grid;
     place-items: center;
-    border: solid 2px orange;
     height: auto;
 }
 
@@ -176,7 +174,7 @@ ul {
     grid-column-end: 2;
     /* can be written shorthand like: grid-column 2/2 */
     grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-end: 3;
     /* can be written shorthand like: grid-row 1/4 */
 }
 
@@ -317,7 +315,7 @@ input, textarea {
     /* position: fixed; */
     width: 100%;
     /* bottom: 0; */
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+    /* background-image: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); */
     font-weight: bold;
 }
 
@@ -329,7 +327,7 @@ input, textarea {
     /* position: fixed; */
     width: 100%;
     /* bottom: 0; */
-    background-image: linear-gradient(to top, rgba(248, 236, 248, 1), rgba(255, 255, 255, 0));
+    /* background-image: linear-gradient(to top, rgba(248, 236, 248, 1), rgba(255, 255, 255, 0)); */
     font-weight: bold;
 }
 
@@ -346,7 +344,7 @@ input, textarea {
     font-variant:small-caps;
     text-decoration: none;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     /* transition-duration: 0.9s;
     transition-property: opacity; *** CAN BE WRITTEN AS: */ 
     transition: 0.2 opacity;
@@ -368,7 +366,7 @@ input, textarea {
   }
 
 #resume-button {
-    margin: auto;
+    margin: 10px auto;
 }
 
 /* LOGO */
