updated new stylesheet via autoprefixer

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,11 @@
 /*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+/*
 INSPO COLORS FOR SITE:
 
 Mac Silver: #DFE0E2
@@ -31,7 +38,21 @@ body {
     font-variant: small-caps;
     color: #28282a;
     line-height: 20px;
+    min-height: 100vh;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr auto;
+    /* values: header, main, footer */
     
+
+}
+
+main {
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+    height: auto;
 }
 
 /* To fix the re-sisizing issues of footer vs page
@@ -45,7 +66,8 @@ body {
 
 
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 } 
 
 a {
@@ -73,6 +95,8 @@ ul {
 /* HEADER */
 
 .page-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     padding: 20px;
@@ -84,50 +108,64 @@ ul {
 }
 
 .page-header__item {
-    flex: 0 1 200px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 200px;
+            flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     text-align: right;
 }
 
 /* BODY CONTENT */
 
-.main-profile {
-    /* transform: translate(0%, 50%); */
-}
+/* .main-profile {
+    transform: translate(0%, 50%);
+} */
 
 .profile__portrait {
     float: left;
     height: 200px;
     border-radius: 50% 50%;  
-    margin: 0 25px 50px 0;
 
 }
 
 
 .profile {
     max-width: 700px;
-    align-items: left;
-    margin: auto;
-    margin-bottom: 35%;
-    padding: 50px 50px 100px;
+    /* align-items: center; */
+    /* margin: auto; */
+    /* margin-bottom: 35%; */
+    padding: 35px;
     background-color: #fff;
-    box-shadow: 5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+            box-shadow: 5px 10px 18px #888888;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10px;
 }
 
 .bio-info {
     text-align: center;
     background-color: #fff;
-    box-shadow: 5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+            box-shadow: 5px 10px 18px #888888;
     padding: 10px;
     width: 50%;
     margin: 5% auto;
 }
 
 .project-list {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     padding: 30px;
@@ -136,49 +174,91 @@ ul {
 
 .project-list__item {
     background-color: #f8ecf8;
-    box-shadow: 5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+            box-shadow: 5px 10px 18px #888888;
     padding: 10px;
 
 }
 
 .project-list__item:nth-child(2) {
-    grid-column-start: 2; 
+    -ms-grid-column: 2;
+        grid-column-start: 2; 
+    -ms-grid-column-span: 0; 
     grid-column-end: 2;
     /* can be written shorthand like: grid-column 2/2 */
-    grid-row-start: 1;
-    grid-row-end: 4;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    -ms-grid-row-span: 2;
+    grid-row-end: 3;
     /* can be written shorthand like: grid-row 1/4 */
 }
 
 
 .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
+}
+
+input, textarea {
+    border-radius: 5px;
+    border: solid 2px lightgray;
 }
 
 #contact-form {
     background-color: #f8ecf8;
-    box-shadow: 5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+            box-shadow: 5px 10px 18px #888888;
     text-align: center;
     padding: 2em;
+    display: -ms-grid;
+    display: grid;
+    gap: 8px;
 }
 
 
 /* ANIMATIONS */
+@-webkit-keyframes city-spin {
+    from {
+        -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+    }
+}
 @keyframes city-spin {
     from {
-        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
     }
 }
 
 .one-way-sign {
-    animation-duration: 2s;
-    animation-name: city-spin;
-    animation-iteration-count: infinite;
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: city-spin;
+            animation-name: city-spin;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
     animation-direction: alternate-reverse;
-    animation-timing-function: linear;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
 }
+
+@-webkit-keyframes color-change {
+    0% {
+      fill: #edc655;
+    }
+    50% {
+      fill: #fcffad;
+    }
+    100% {
+      fill: #f76414;
+    }
+  }
 
 @keyframes color-change {
     0% {
@@ -193,75 +273,136 @@ ul {
   }
 
   .sun {
-    animation-duration: 10s;
-    animation-name: color-change;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
+    -webkit-animation-duration: 10s;
+            animation-duration: 10s;
+    -webkit-animation-name: color-change;
+            animation-name: color-change;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+  }
+
+  @-webkit-keyframes m-move {
+    from {
+        -webkit-transform: scale(1.1, 1);
+                transform: scale(1.1, 1);
+    }
   }
 
   @keyframes m-move {
     from {
-        transform: scale(1.1, 1);
+        -webkit-transform: scale(1.1, 1);
+                transform: scale(1.1, 1);
     }
   }
 
   .m-miami {
-    animation: 1s m-move infinite alternate linear;
+    -webkit-animation: 1s m-move infinite alternate linear;
+            animation: 1s m-move infinite alternate linear;
   }
+
+@-webkit-keyframes boat-move {
+    from {
+        -webkit-transform: translate(50px, 0);
+                transform: translate(50px, 0);
+    }
+    to {
+        -webkit-transform: translate(-50px, 0);
+                transform: translate(-50px, 0)
+    }
+}
 
 @keyframes boat-move {
     from {
-        transform: translate(50px, 0);
+        -webkit-transform: translate(50px, 0);
+                transform: translate(50px, 0);
     }
     to {
-        transform: translate(-50px, 0)
+        -webkit-transform: translate(-50px, 0);
+                transform: translate(-50px, 0)
     }
 }
 
 .boat {
-    animation: 15s boat-move infinite alternate linear;
+    -webkit-animation: 15s boat-move infinite alternate linear;
+            animation: 15s boat-move infinite alternate linear;
+}
+
+
+
+@-webkit-keyframes cloud-move {
+    from {
+        -webkit-transform: scale(2, 0);
+                transform: scale(2, 0)
+    }
+  
 }
 
 
 
 @keyframes cloud-move {
     from {
-        transform: scale(2, 0)
+        -webkit-transform: scale(2, 0);
+                transform: scale(2, 0)
     }
   
 }
 
 
 .cloud-front {
-    animation: 30s cloud-move infinite alternate linear;
+    -webkit-animation: 30s cloud-move infinite alternate linear;
+            animation: 30s cloud-move infinite alternate linear;
 }
 
 
 #where-from {
- width: 70%;
+ width: 500px;
 }
 
 .where-lived {
     text-align: center;
     background-color: #fff;
-    box-shadow: 5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+            box-shadow: 5px 10px 18px #888888;
+    width: 80%;
+}
+
+@-webkit-keyframes cloud-move-reverse {
+    from {
+        -webkit-transform: translate(446px, 48px);
+                transform: translate(446px, 48px);
+    }
+    to {
+        -webkit-transform: translate(100px, 48px);
+                transform: translate(100px, 48px);
+    }
+    to {
+        -webkit-transform: scale(2, 1);
+                transform: scale(2, 1);
+    }
 }
 
 @keyframes cloud-move-reverse {
     from {
-        transform: translate(446px, 48px);
+        -webkit-transform: translate(446px, 48px);
+                transform: translate(446px, 48px);
     }
     to {
-        transform: translate(100px, 48px);
+        -webkit-transform: translate(100px, 48px);
+                transform: translate(100px, 48px);
     }
     to {
-        transform: scale(2, 1);
+        -webkit-transform: scale(2, 1);
+                transform: scale(2, 1);
     }
 }
 
 .cloud-back {
-    animation: 34s cloud-move-reverse infinite alternate linear;
+    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+            animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 
@@ -278,25 +419,35 @@ ul {
 /* FOOTER */
 .page-footer {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
-    bottom: 0;
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+    /* bottom: 0; */
+    /* background-image: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); */
     font-weight: bold;
 }
 
 .contact-footer {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
-    bottom: 0;
-    background-image: linear-gradient(to top, rgba(248, 236, 248, 1), rgba(255, 255, 255, 0));
+    /* bottom: 0; */
+    /* background-image: linear-gradient(to top, rgba(248, 236, 248, 1), rgba(255, 255, 255, 0)); */
     font-weight: bold;
 }
 
@@ -312,9 +463,11 @@ ul {
     font-variant:small-caps;
     text-decoration: none;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     /* transition-duration: 0.9s;
     transition-property: opacity; *** CAN BE WRITTEN AS: */ 
+    -webkit-transition: 0.2 opacity; 
+    -o-transition: 0.2 opacity; 
     transition: 0.2 opacity;
 }
 
@@ -327,9 +480,11 @@ ul {
     font-variant:small-caps;
     text-decoration: none;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     /* transition-duration: 0.9s;
     transition-property: opacity; *** CAN BE WRITTEN AS: */ 
+    -webkit-transition: 0.2 opacity; 
+    -o-transition: 0.2 opacity; 
     transition: 0.2 opacity;
 }
 
@@ -343,18 +498,22 @@ ul {
 
 #resume-button:active {
     background-color: #2e8540;
-    box-shadow: none;
-    transform: translateZ(4px);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-transform: translateZ(4px);
+            transform: translateZ(4px);
   }
 
 .message-submit-button:active {
     background-color: #2e8540;
-    box-shadow: none;
-    transform: translateZ(4px);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-transform: translateZ(4px);
+            transform: translateZ(4px);
   }
 
 #resume-button {
-    margin: auto;
+    margin: 10px auto;
 }
 
 /* LOGO */
@@ -366,6 +525,7 @@ ul {
 
 @media all and (max-width: 750px) {
     .project-list {
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     }
 
@@ -383,21 +543,28 @@ ul {
     }
 
     .main-profile {
-        margin: 8%; 
         text-align: center;
         font-size: 12px;
     }
 
     .profile__portrait {
         float: none;
-    }    
+    }   
+    
+    article {
+        font-size: 16px;
+    } 
+
+    #here {
+        font-size: 16px;;
+    }
 
     h1 {
         font-size: 22px;
     }
 
     a {
-        font-size: 12px;
+        font-size: 14px;
     }
 }
 
@@ -407,6 +574,20 @@ ul {
 2. Build in most og CSS possible beofre adding fun flex and grid. 
 
 */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
