--- a/css/style.production.css
+++ b/css/style.production.css
@@ -182,11 +182,13 @@ ul {
 
 .project-list__item:nth-child(2) {
     -ms-grid-column: 2;
+    grid-column: 2;
         grid-column-start: 2; 
     -ms-grid-column-span: 0; 
     grid-column-end: 2;
     /* can be written shorthand like: grid-column 2/2 */
     -ms-grid-row: 1;
+    grid-row: 1;
         grid-row-start: 1;
     -ms-grid-row-span: 2;
     grid-row-end: 3;
